# inli-scrapper

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml  requirements-macos.txt  requirements.txt  start.sh
src/: agent.py  database.py  main.py
